--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -34,8 +34,8 @@
               <ul>
                 <% for( let i = 0; i < categories.length; i++ ) { %>
                 <li style="list-style: none;">
-                  <a href="#" class="nav-category-list" style="color: black; text-decoration: none;">
-                    <%= categories[i].name %> 
+                  <a href="/api/products/all-products/<%=categories[i]._id%>" class="nav-category-list" style="color: black; text-decoration: none;">
+                    <%= categories[i].name %>
                   </a>
                 </li>
                 <% } %>
@@ -47,7 +47,7 @@
             Create Category
             </a>
           </li>
-         
+
         <% } %>
       </ul>
       <% if (!user) { %>
@@ -61,6 +61,6 @@
       <% } else {%>
       <span style="color:white"> Hello &nbsp; <a style="color: chartreuse;" href="/api/users/profile"><%= user.profile.name.toUpperCase()%> </a> &nbsp;|&nbsp; </span>
       <span class="myNavLogout"><a style="color:beige;"" href="/logout">Logout</a></span>
-      <% } %> 
+      <% } %>
     </div>
   </nav>
